[workspace]
resolver = "2"

members = ["app"]

[workspace.package]
rust-version = "1.72"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.80"
thiserror = "2.0.6"
dotenvy = "0.15.7"
sailfish = { version = "0.9.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio-postgres = { version = "0.7.10", features = [
    "with-time-0_3",
    "with-chrono-0_4",
] }
tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
] }
tracing = "0.1.40"
dotenv = "0.15.0"
tower-http = { version = "0.6.1", features = ["cors", "trace", "fs"] }
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-async-std",
    "runtime-tokio",
] }
axum = { version = "0.7.5", features = ["multipart"] }
uuid = { version = "1.0", features = ["serde", "v7"] }
