[package]
name = "app"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenv.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
